# fairsharer

./: README.md  fairsharer.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_fairsharer.py
